After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 772524 - Appstream files in an app-info folder no longer get considered for Flatpak apps
Appstream files in an app-info folder no longer get considered for Flatpak apps
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-10-06 18:25 UTC by Joaquim Rocha
Modified: 2016-10-12 10:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Example simple appstream file (262 bytes, text/xml)
2016-10-06 18:25 UTC, Joaquim Rocha
Details

Description Joaquim Rocha 2016-10-06 18:25:27 UTC
Created attachment 337088 [details]
Example simple appstream file

I have just noticed that if we add an XML file to an app-info folder (user or system wide) GNOME Software no longer reflects the changes expressed in that file automatically (e.g. if that file adds new categories to apps already known by g-s).

The commit that introduces the issue is:
 commit b4ca13f897a3b88baf2a3be4249e811aaafad1d9
     Do not rely on the AppStream plugin to handle searching in flatpak

To reproduce just add an appstream file with a couple of app components, just their id and a category not visible in GNOME Software (easy if you compile without PackageKit).
Comment 1 Richard Hughes 2016-10-06 19:15:46 UTC
So, I kinda forgot about this; we have two independent AsStore objects now. I'll have a think on how to solve this properly.
Comment 2 Richard Hughes 2016-10-10 17:02:21 UTC
Sorry I dropped the ball on this; struggling with being sick here. I assume that system and user app-info matches would match both user and system flatpak apps?

For instance, should a merge component in ~/.local/share/app-info/xmls/ be merged with a per-system flatpak app? My gut instinct says yes, but ideas welcome.
Comment 3 Richard Hughes 2016-10-12 10:24:25 UTC
commit f4e7997118a001aab352d7c91697a57d4e5e1804
Author: Richard Hughes <richard@hughsie.com>
Date:   Wed Oct 12 10:17:43 2016 +0100

    Load user and system merge components into the flatpak stores
    
    Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=772524

:100644 100644 ff7fa80... ef4d396... M  src/plugins/gs-flatpak.c

Can you verify things and tell me if this actually fixes this bug please. Thanks!