Load user and system merge components into the flatpak stores

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=772524
(cherry picked from commit f4e7997118a001aab352d7c91697a57d4e5e1804)